# freesight

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.txt  freesight.sln  main.cpp  stdafx.h  targetver.h
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake
config/: config.h
firewall/: windows_firewall.cpp  windows_firewall.h
freesight/: freesight.rc  freesight.vcxproj  freesight.vcxproj.filters  http_manager.cpp  http_manager.h  logger.h  main.cpp  resource.h
http/: http_get.h  manager.cpp  manager.h
lib/: elevate.h  split.h  wzip.h
lib/zip/: libzippp.cpp
logger/: banner.h  color.h  logger.h
regedit/: regedit.cpp  regedit.h
res/: metadata.rc
updater/: get_version.h  updater.h
vpn/: installer.h
